[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/menu/core/form/item/UIMenuFormSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/shader/ui/UIOverlay.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/shader/gamma-correction.tres" type="Shader" id=3]
[ext_resource path="res://assets/images/ui/gamma.svg" type="Texture" id=4]
[ext_resource path="res://scenes/ui/menu/core/form/item/custom/UIMenuFormSliderGamma.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/visible = true
shader_param/blink_frequency = 0.5
shader_param/min_alpha = 0.5
shader_param/border_width = 3.0
shader_param/border_fuzz = 3.0
shader_param/border_color = Color( 1, 1, 1, 0.784314 )
shader_param/inner_color = Color( 1, 1, 1, 0.227451 )
shader_param/size = Vector2( 1024, 48 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_left = 2.0
expand_margin_right = 1.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/gamma = 1.305

[node name="UIMenuFormSliderGamma" instance=ExtResource( 1 )]
margin_bottom = 0.0
rect_min_size = Vector2( 0, 48 )
script = ExtResource( 5 )
allow_half_value = true

[node name="VBox" parent="." index="0"]
margin_bottom = 206.0

[node name="Overlay" parent="VBox/Input" index="1"]
material = SubResource( 3 )

[node name="Helper" type="MarginContainer" parent="VBox" index="1"]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 206.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/Helper" index="0"]
margin_left = 20.0
margin_top = 5.0
margin_right = 1004.0
margin_bottom = 155.0
custom_constants/separation = 20

[node name="VSeparator" type="VSeparator" parent="VBox/Helper/HBoxContainer" index="0"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 40.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 0 )
custom_styles/separator = SubResource( 5 )

[node name="Label" type="Label" parent="VBox/Helper/HBoxContainer" index="1"]
margin_left = 60.0
margin_right = 664.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "gamma_hint"
align = 2

[node name="GammaTexture" type="TextureRect" parent="VBox/Helper/HBoxContainer" index="2"]
material = SubResource( 4 )
margin_left = 684.0
margin_right = 984.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )
mouse_filter = 2
size_flags_horizontal = 8
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_UIMenuFormSliderGamma_pressed"]
